--- a/src/ipywui/widgets/custom/dialog/index.css
+++ b/src/ipywui/widgets/custom/dialog/index.css
@@ -8,6 +8,12 @@
     top: 0;
     z-index: 999;
 }
+.wui-modal-root[data-state=open] {
+    display: block;
+}
+.wui-modal-root[data-state=close] {
+    display: none;
+}
 
 .wui-modal-dialog-container {
     align-items: center;
