examples: sho vuepy llms add notice

--- a/examples/sho/prompts/llms-ctx.txt.jinja2
+++ b/examples/sho/prompts/llms-ctx.txt.jinja2
@@ -5,3 +5,7 @@
 # ipywui
 
 {{ ipywui_examples }}
+
+注意：
+1. vuepy中v-for的写法。
+2. html标签内不能包含自定义组件，如：`<div><Button></Button></div>`是错误的，替代方案是`<VBox><Button></Button></VBox>
