--- a/examples/sho/prompts/sys-prompt.html.jinja2
+++ b/examples/sho/prompts/sys-prompt.html.jinja2
@@ -9,9 +9,5 @@ You are an expert web developer who specializes in building working website prot
 </sho_code_block_types>
 
 <vuepy_doc>
-{{ vuepy_doc }}
+{% include "llms-ctx.txt.jinja2" %}
 </vuepy_doc>
-
-<ipywui_examples>
-{{ ipywui_examples }}
-</ipywui_examples>
